--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--<LinearLayout-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:id="@+id/linear_main"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:orientation="vertical"-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->
-
-    <!--<ScrollView android:id="@+id/main_scroll_view"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_width="match_parent">-->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_scroll_view"
+    tools:context=".MainActivity"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
 
 <FrameLayout
@@ -45,5 +41,4 @@
         android:dividerHeight="0dp"/>
 
 </FrameLayout>
-<!--</ScrollView>-->
-<!--</LinearLayout>-->
+</ScrollView>
