--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_scroll_view"
-    tools:context=".MainActivity"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:id="@+id/main_scroll_view"-->
+    <!--tools:context=".MainActivity"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_width="match_parent">-->
 
 
 <FrameLayout
@@ -41,4 +41,4 @@
         android:dividerHeight="0dp"/>
 
 </FrameLayout>
-</ScrollView>
+<!--</ScrollView>-->
